# mvp

./: .gitignore  config.py  discovery_progress.txt  production.yaml  pyproject.toml  secrets_template.yaml
docs/: elo-warmup-comparison.md
docs/plans/: 2026-03-05-serve-return-elo-implementation.md  2026-03-05-serve-return-elo-redesign.md
experiments/: baseline.yaml  discover.yaml  tour_chal_disc.yaml  tour_chal_disc_20260301.yaml
models/: baseline.yaml  baseline_tossup.yaml  ens_base_logistic_elo.yaml  ens_base_logistic_form.yaml  ens_base_logistic_ranking.yaml  ens_base_logistic_serve.yaml  ens_base_rf_elo.yaml  ensemble_3elo_age_2010_2020_ew.yaml  ensemble_5model_test.yaml  logistic_10f_ew_2020.yaml  logistic_12f_ew_2020.yaml  tossup_specialist.yaml
models/production/: de1212_log_15f.yaml  ds_2020_2412_log_hl365.yaml  e00_35_wsA_cAll_15f.yaml  e00_75_wsA_cA_20f.yaml  log_fs_e75_f20_00.yaml  ml_lr_e00_75_wA_cA_f20_exc0.yaml  xgb_e00_45_cAll_9f.yaml  xgb_fs_log_tuned_260331.yaml  xgb_log_ds2412_05_t16_asym_105.yaml  xgb_log_ds2412_noes.yaml
models/voters/: blowout_specialist.yaml  close_specialist.yaml  fs_log_wsA_f15_close_matches.yaml  lr_ability.yaml  lr_fs_15f_260331.yaml  rf.yaml  tour_only.yaml  xgb.yaml  xgb_e00_45_cAll_4f.yaml  xgb_e00_45_cAll_7f.yaml
mvp/: base_job.py  pipeline.py
mvp/action_network/: extractor.py  job.py  stager.py
ops/: start-dashboard.sh
ops/live/: README.md  crontab  install.sh
src/mvp/: __main__.py  cli.py  notify.py  pipeline_report.py
tests/: test_cli.py  test_notify.py  test_pipeline_report.py
tests/analysis/: conftest.py  test_aggregator.py  test_dashboard_app.py  test_dashboard_bets.py  test_dashboard_components.py  test_dashboard_e2e.py  test_dashboard_edge.py  test_dashboard_execution.py  test_dashboard_health.py  test_dashboard_health_data.py  test_dashboard_insights.py  test_dashboard_odds.py  test_dashboard_overview.py  test_dashboard_sharpness.py  test_dataset.py  test_event_map.py  test_odds.py  test_report.py  test_scanner.py  test_sheet_persist.py  test_simulations.py  test_transformer.py
tests/atptour/: test_cli.py  test_discovery.py  test_mappings.py  test_pipeline.py  test_pipeline_utils.py  test_schema_helpers.py  test_tournament.py
tests/bet365/: test_odds.py
tests/betmgm/: test_matcher.py  test_odds.py
tests/betrivers/: test_matcher.py  test_odds.py
tests/caesars/: test_matcher.py  test_odds.py
tests/common/: test_base_extractor.py  test_base_job.py  test_cf_solver.py  (+6 more)
(+457 files in other folders)
