[project]
name = "mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "hopfing",email = "167368581+hopfing@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]


[tool.poetry]
packages = [{include = "mvp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.2,<0.16.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
