[project]
name = "mvp"
version = "0.1.0"
description = ""
authors = [
    {name = "hopfing",email = "167368581+hopfing@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "mlflow (>=3.0,<4.0.0)",
    "xgboost (>=2.0,<3.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "graphql-core (>=3.2.0,<4.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "gspread (>=6.0.0,<7.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "cloudscraper (>=1.2,<2.0.0)",
    "torch (>=2.2,<3.0.0)"
]


[tool.poetry]
packages = [{include = "mvp", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.2,<0.16.0)",
    "playwright (>=1.58.0,<2.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that process the full raw data corpus",
    "integration: marks tests that require external services (Google Sheets)",
]
addopts = "-m 'not slow and not integration'"

[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
